--- a/components/about-us.html
+++ b/components/about-us.html
@@ -12,14 +12,14 @@
     <title>EduWell - Education HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-eduwell-style.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-eduwell-style.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/lightbox.css">
 <!--
 
 TemplateMo 573 EduWell
@@ -39,15 +39,15 @@ https://templatemo.com/tm-573-eduwell
               <div class="col-12">
                 <nav class="main-nav">
                   <!-- ***** Logo Start ***** -->
-                  <a href="index.html" class="logo">
-                      <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                  <a href="../index.html" class="logo">
+                      <img src="../assets/images/templatemo-eduwell.png" alt="EduWell Template">
                   </a>
                   <!-- ***** Logo End ***** -->
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="index.html">Services</a></li>
-                    <li><a href="index.html">Courses</a></li>
+                    <li><a href="../index.html" class="active">Home</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../index.html">Courses</a></li>
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
@@ -56,8 +56,8 @@ https://templatemo.com/tm-573-eduwell
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </li>
-                    <li><a href="index.html">Testimonials</a></li> 
-                    <li><a href="index.html">Contact Us</a></li> 
+                    <!--<li><a href="index.html">Testimonials</a></li> -->
+                    <li><a href="../index.html">Contact Us</a></li> 
                 </ul>         
                   <a class='menu-trigger'>
                       <span>Menu</span>
@@ -88,7 +88,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-6">
           <div class="left-image">
-            <img src="assets/images/about-left-image.png" alt="">
+            <img src="../assets/images/about-left-image.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 align-self-center">
@@ -101,7 +101,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="col-lg-6">
               <div class="info-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Best Strategy</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -110,7 +110,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="col-lg-6">
               <div class="info-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="../assets/images/service-icon-02.png" alt="">
                 </div>
                 <h4>Creative Ideas</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -138,27 +138,27 @@ https://templatemo.com/tm-573-eduwell
                 <div class="col-lg-12">
                   <div class="menu">
                     <div class="active">
-                      <img src="assets/images/team-member-thumb-01.jpg" alt="">
+                      <img src="../assets/images/team-member-thumb-01.jpg" alt="">
                       <h4>Ruby Foster</h4>
                       <span>CEO-FOUNDER</span>
                     </div>
                     <div>
-                      <img src="assets/images/team-member-thumb-03.jpg" alt="">
+                      <img src="../assets/images/team-member-thumb-03.jpg" alt="">
                       <h4>Luis Oconnell</h4>
                       <span>CEO-FOUNDER</span>
                     </div>
                     <div>
-                      <img src="assets/images/team-member-thumb-02.jpg" alt="">
+                      <img src="../assets/images/team-member-thumb-02.jpg" alt="">
                       <h4>Jackie Riggs</h4>
                       <span>CEO-FOUNDER</span>
                     </div>
                     <div>
-                      <img src="assets/images/team-member-thumb-04.jpg" alt="">
+                      <img src="../assets/images/team-member-thumb-04.jpg" alt="">
                       <h4>Alfred Small</h4>
                       <span>CEO-FOUNDER</span>
                     </div>
                     <div>
-                      <img src="assets/images/team-member-thumb-05.jpg" alt="">
+                      <img src="../assets/images/team-member-thumb-05.jpg" alt="">
                       <h4>Denis Mitchel</h4>
                       <span>CEO-FOUNDER</span>
                     </div>
@@ -179,7 +179,7 @@ https://templatemo.com/tm-573-eduwell
                           </div>
                         </div>
                         <div class="right-image">
-                          <img src="assets/images/team-member-01.jpg" alt="">
+                          <img src="../assets/images/team-member-01.jpg" alt="">
                         </div>
                       </div>
                     </li>
@@ -196,7 +196,7 @@ https://templatemo.com/tm-573-eduwell
                           </div>
                         </div>
                         <div class="right-image">
-                          <img src="assets/images/team-member-03.jpg" alt="">
+                          <img src="../assets/images/team-member-03.jpg" alt="">
                         </div>
                       </div>
                     </li>
@@ -213,7 +213,7 @@ https://templatemo.com/tm-573-eduwell
                           </div>
                         </div>
                         <div class="right-image">
-                          <img src="assets/images/team-member-02.jpg" alt="">
+                          <img src="../assets/images/team-member-02.jpg" alt="">
                         </div>
                       </div>
                     </li>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-573-eduwell
                           </div>
                         </div>
                         <div class="right-image">
-                          <img src="assets/images/team-member-04.jpg" alt="">
+                          <img src="../assets/images/team-member-04.jpg" alt="">
                         </div>
                       </div>
                       </li>
@@ -247,7 +247,7 @@ https://templatemo.com/tm-573-eduwell
                             </div>
                           </div>
                           <div class="right-image">
-                            <img src="assets/images/team-member-05.jpg" alt="">
+                            <img src="../assets/images/team-member-05.jpg" alt="">
                           </div>
                         </div>
                         </li>
@@ -266,7 +266,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-5 offset-lg-1">
           <div class="left-image">
-            <img src="assets/images/cta-left-image.png" alt="">
+            <img src="../assets/images/cta-left-image.png" alt="">
           </div>
         </div>
         <div class="col-lg-5 align-self-center">
@@ -297,56 +297,56 @@ https://templatemo.com/tm-573-eduwell
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
             <div class="item">
               <p>“Food & truck tumeric hoodie chiasore bit-
                 ters retroed gentrify street portland.”</p>
                 <h4>Andrea Furistos</h4>
                 <span>CEO-FOUNDER</span>
-                <img src="assets/images/quote.png" alt="">
+                <img src="../assets/images/quote.png" alt="">
             </div>
           </div>
         </div>
@@ -382,7 +382,7 @@ https://templatemo.com/tm-573-eduwell
         <div class="col-lg-8">
           <div id="video">
             <div class="thumb">
-              <img src="assets/images/video-thumb.jpg" alt="">
+              <img src="../assets/images/video-thumb.jpg" alt="">
               <div class="play-button">
                 <a rel="nofollow" href="https://www.youtube.com/templatemo" target="_blank"><i class="fa fa-play"></i></a>
               </div>
@@ -409,16 +409,16 @@ https://templatemo.com/tm-573-eduwell
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../assets/js/isotope.min.js"></script>
+    <script src="../assets/js/owl-carousel.js"></script>
+    <script src="../assets/js/lightbox.js"></script>
+    <script src="../assets/js/tabs.js"></script>
+    <script src="../assets/js/video.js"></script>
+    <script src="../assets/js/slick-slider.js"></script>
+    <script src="../assets/js/custom.js"></script>
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
