--- a/components/our-services.html
+++ b/components/our-services.html
@@ -12,13 +12,13 @@
     <title>EduWell - Education HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-eduwell-style.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-eduwell-style.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/lightbox.css">
 <!--
 
 TemplateMo 573 EduWell
@@ -37,15 +37,15 @@ https://templatemo.com/tm-573-eduwell
               <div class="col-12">
                 <nav class="main-nav">
                   <!-- ***** Logo Start ***** -->
-                  <a href="index.html" class="logo">
-                      <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                  <a href="../index.html" class="logo">
+                      <img src="../assets/images/templatemo-eduwell.png" alt="EduWell Template">
                   </a>
                   <!-- ***** Logo End ***** -->
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="index.html">Services</a></li>
-                    <li><a href="index.html">Courses</a></li>
+                    <li><a href="../index.html" class="active">Home</a></li>
+                    <li><a href="../index.html">Services</a></li>
+                    <li><a href="../index.html">Courses</a></li>
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
@@ -54,8 +54,8 @@ https://templatemo.com/tm-573-eduwell
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </li>
-                    <li><a href="index.html">Testimonials</a></li> 
-                    <li><a href="index.html">Contact Us</a></li> 
+                    <!--<li><a href="../index.html">Testimonials</a></li> -->
+                    <li><a href="../index.html">Contact Us</a></li> 
                   </ul>     
                   <a class='menu-trigger'>
                       <span>Menu</span>
@@ -95,7 +95,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Useful Tricks</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -104,7 +104,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="../assets/images/service-icon-02.png" alt="">
                 </div>
                 <h4>Creative Ideas</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -113,7 +113,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="../assets/images/service-icon-03.png" alt="">
                 </div>
                 <h4>Ready Target</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -122,7 +122,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
+                  <img src="../assets/images/service-icon-04.png" alt="">
                 </div>
                 <h4>Technology</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -131,7 +131,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Useful Tricks</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -140,7 +140,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="../assets/images/service-icon-02.png" alt="">
                 </div>
                 <h4>Creative Ideas</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -149,7 +149,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="../assets/images/service-icon-03.png" alt="">
                 </div>
                 <h4>Ready Target</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -158,7 +158,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
+                  <img src="../assets/images/service-icon-04.png" alt="">
                 </div>
                 <h4>Technology</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -167,7 +167,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Useful Tricks</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -176,7 +176,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="../assets/images/service-icon-02.png" alt="">
                 </div>
                 <h4>Creative Ideas</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -185,7 +185,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="../assets/images/service-icon-03.png" alt="">
                 </div>
                 <h4>Ready Target</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -194,7 +194,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="item">
               <div class="service-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-04.png" alt="">
+                  <img src="../assets/images/service-icon-04.png" alt="">
                 </div>
                 <h4>Technology</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -211,7 +211,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-5 offset-lg-1">
           <div class="left-image">
-            <img src="assets/images/cta-left-image.png" alt="">
+            <img src="../assets/images/cta-left-image.png" alt="">
           </div>
         </div>
         <div class="col-lg-5 align-self-center">
@@ -240,7 +240,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="col-lg-12">
               <div class="info-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Best Strategy</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -249,7 +249,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="col-lg-12">
               <div class="info-item last-info">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Best Strategy</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -259,7 +259,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-6">
           <div class="product-image">
-            <img src="assets/images/featured-product.jpg" alt="">
+            <img src="../assets/images/featured-product.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-3 align-self-center">
@@ -267,7 +267,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="col-lg-12">
               <div class="info-item">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Best Strategy</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -276,7 +276,7 @@ https://templatemo.com/tm-573-eduwell
             <div class="col-lg-12">
               <div class="info-item last-info">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="../assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>Best Strategy</h4>
                 <p>Food & truck tumeric taxidermy hoodie chiasore bitters retroed gentrify street portland.</p>
@@ -316,7 +316,7 @@ https://templatemo.com/tm-573-eduwell
         <div class="col-lg-8">
           <div id="video">
             <div class="thumb">
-              <img src="assets/images/video-thumb.jpg" alt="">
+              <img src="../assets/images/video-thumb.jpg" alt="">
               <div class="play-button">
                 <a href="http://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
               </div>
@@ -343,16 +343,16 @@ https://templatemo.com/tm-573-eduwell
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="../assets/js/isotope.min.js"></script>
+    <script src="../assets/js/owl-carousel.js"></script>
+    <script src="../assets/js/lightbox.js"></script>
+    <script src="../assets/js/tabs.js"></script>
+    <script src="../assets/js/video.js"></script>
+    <script src="../assets/js/slick-slider.js"></script>
+    <script src="../assets/js/custom.js"></script>
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
