--- a/components/about-us.html
+++ b/components/about-us.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-573-eduwell
                   <ul class="nav">
                     <li><a href="../index.html" class="active">Home</a></li>
                     <li><a href="../index.html">Services</a></li>
-                    <li><a href="../index.html">Courses</a></li>
+                    <!--<li><a href="../index.html">Courses</a></li>-->
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
@@ -271,10 +271,10 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-5 align-self-center">
           <h6>Get the sale right now!</h6>
-          <h4>Up to 50% OFF For 1+ courses</h4>
+          <!--<h4>Up to 50% OFF For 1+ courses</h4>-->
           <p>Kogi VHS freegan bicycle rights try-hard green juice probably haven't heard of them cliche la croix af chillwave.</p>
           <div class="white-button">
-            <a href="contact-us.html">View Courses</a>
+            <a href="contact-us.html">View offers</a>
           </div>
         </div>
       </div>
