--- a/components/contact-us.html
+++ b/components/contact-us.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-573-eduwell
                   <ul class="nav">
                     <li><a href="../index.html" class="active">Home</a></li>
                     <li><a href="../index.html">Services</a></li>
-                    <li><a href="../index.html">Courses</a></li>
+                   <!-- <li><a href="../index.html">Courses</a></li>-->
                     <li class="has-sub">
                         <a href="javascript:void(0)">Pages</a>
                         <ul class="sub-menu">
